# orli

./: .gitignore  QUICKSTART_REGNETX.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
experiments/: ablation_01_no_anchor_embedding.yaml  ablation_02_no_anchor_no_fourier.yaml  ablation_03_direct_point_no_anchor_no_fourier.yaml  base.yaml  hybrid_neck_base_coarse.yaml  hybrid_neck_large_coarse.yaml  hybrid_neck_pico_coarse.yaml  hybrid_neck_small_coarse.yaml  hybrid_neck_tiny_coarse.yaml  hybrid_neck_tiny_mid_coarse.yaml  pretraining.yaml  pretraining_multi_anchor.yaml  pretraining_single_anchor.yaml  simple_neck_tiny.yaml
orli/: augmentation.py  configs.py  dataset.py  default_specs.py  fusion.py  lightning_utils.py  metrics.py  model.py  orli.py  pred.py  util.py
orli/assets/: anchors.json  anchors.pt
orli/cli/: __init__.py  cluster_anchors.py  compile.py  pred.py  test.py  train.py  util.py
orli/contrib/: compute_anchors.py  draw_baselines_from_xml.py  plot_orli.py
orli/modules/: __init__.py  baseline.py  bezier.py  norms.py  optimizer.py  position_embeddings.py  transformer.py
transformer_seg/: dataset.py  decoder.py  default_specs.py  embedding.py  fusion.py  model.py
transformer_seg/cli/: __init__.py  train.py  util.py
transformer_seg/modules/: __init__.py  llama_components.py  transformer.py
