[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "orli"
dynamic = ["version"]
description = "Ordered Regression of Lines"
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "Benjamin Kiessling", email = "mittagessen@l.unchti.me"},
]
keywords = ["htr"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "kraken~=7.0.0b5",
    "timm",
    "python-bidi",
    "rich",
]

[project.urls]
Homepage = "https://kraken.re"

[project.scripts]
orli = "orli.cli:cli"

[project.entry-points."ketos.cli"]
orli_train = "orli.cli.train:train"

[project.entry-points."kraken.models"]
OrliModel = "orli.orli:OrliModel"

[project.entry-points."kraken.lightning_modules"]
orli = "orli.model:OrliSegmentationModel"

[project.entry-points."kraken.configs"]
OrliSegmentationTrainingDataConfig = "orli.configs:OrliSegmentationTrainingDataConfig"
OrliSegmentationTrainingConfig = "orli.configs:OrliSegmentationTrainingConfig"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["orli"]

[tool.hatch.build.targets.sdist]
include = ["orli/"]
