[metadata]
name = orli 
author = Benjamin Kiessling
author_email = mittagessen@l.unchti.me
summary = foo
home_page = http://kraken.re
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache
classifier =
        Environment :: Console
        Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13

keywords =
    htr

[files]
packages = orli 

[entry_points]
console_scripts =
    orli = orli.cli:cli
ketos.cli =
  orli_train = orli.cli.train:train
kraken.models =
  OrliModel = orli.orli:OrliModel
kraken.lightning_modules =
  orli = orli.model:OrliSegmentationModel
kraken.configs =
  OrliSegmentationTrainingDataConfig = orli.configs:OrliSegmentationTrainingDataConfig
  OrliSegmentationTrainingConfig = orli.configs:OrliSegmentationTrainingConfig

[flake8]
max_line_length = 160
exclude = tests/*

[options]
python_requires = >=3.10,<3.14
install_requires =
    kraken @ git+https://github.com/mittagessen/kraken@feature/safetensors_serialization
    timm
    pillow-jxl-plugin
    python-bidi
    rich
